Add missing --add-opens to maven profile